just some modesty

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Andrey Tsvetkov
-tagline: High quality software developer
+tagline: Software architect
 email: ts.andrey@gmail.com
 description: > 
   Andrey Tsvetkov, the software developer
