обновление даты и имени

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Andrey Tsvetkov
-tagline: Software architect
+title: Андрей Цветков
+tagline: архитектор программного обеспечения
 email: ts.andrey@gmail.com
 description: > 
-  Andrey Tsvetkov, the software developer
+  Андрей Цветков, архитектор ПО
 baseurl: "" 
 url: "https://AndreyTsvetkov.github.io/" 
 #twitter_username: jekyllrb
